panels opened metric
added panels opened metric
removed the FakeEvolution pieces, returning null now instead

--- a/index.html
+++ b/index.html
@@ -56,7 +56,12 @@ title: DevTools Dashboard
       <div class="col-md-6">
         <div class="row">
           <div class="col-md-12 graph-body">
-            <div id="devtools-toolbox-panel-opened-chart"></div>
+            <div id="devtools-toolbox-panels-opened-chart"></div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12 graph-legend">
+            <div id="devtools-toolbox-panels-opened-chart-legend"></div>
           </div>
         </div>
       </div>
@@ -177,7 +182,7 @@ title: DevTools Dashboard
     </div>
 
 
-
+<!--
     <div class="row">
       <div class="col-md-6">
         <div class="row">
@@ -203,7 +208,7 @@ title: DevTools Dashboard
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
   </div>
 
