add panels time active chart

--- a/index.html
+++ b/index.html
@@ -68,7 +68,12 @@ title: DevTools Dashboard
       <div class="col-md-6">
         <div class="row">
           <div class="col-md-12 graph-body">
-            <div id="devtools-toolbox-panel-active-time-chart"></div>
+            <div id="devtools-toolbox-panels-time-active-chart"></div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12 graph-legend">
+            <div id="devtools-toolbox-panels-time-active-chart-legend"></div>
           </div>
         </div>
       </div>
