--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@ title: DevTools Dashboard
 
     <div class="row">
       <div class="col-md-12 graph-header text-center">
-        <h4>DevTools Toolbox</h4>
+        <h4>Toolbox Opened</h4>
       </div>
     </div>
 
     <div class="row">
-      <div class="col-md-8">
+      <div class="col-md-4">
         <div class="row">
           <div class="col-md-12 graph-body">
             <div id="devtools-toolbox-opened-chart"></div>
@@ -30,18 +30,49 @@ title: DevTools Dashboard
       <div class="col-md-4">
         <div class="row">
           <div class="col-md-12 graph-body">
-            <div id="devtools-toolbox-time-active-chart"></div>
+            <div id="devtools-toolbox-opened-per-user-chart"></div>
           </div>
         </div>
         <div class="row">
           <div class="col-md-12 graph-legend">
-            <div id="devtools-toolbox-time-active-chart-legend"></div>
-            <p>Over a rolling 6 months this chart shows the amount of time spent (y axis)
-              with the DevTools toolbox opened and the release.  Size of the circles indicates the
-              number of users reporting that time slot.
-            </p>
+            <div class="text-center" id="devtools-toolbox-opened-per-user-chart-legend"></div>
           </div>
         </div>
+      </div>
+      <div class="col-md-4">
+        <div class="row">
+          <div class="col-md-12 graph-body">
+            <div id="devtools-toolbox-opened-ratio-chart"></div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12 graph-legend">
+            <div class="text-center" id="devtools-toolbox-opened-ratio-chart-legend"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="clearfix">
+      <p>&nbsp;</p>
+    </div>
+
+    <div class="row">
+      <div class="col-md-12 graph-header text-center">
+        <h4>Toolbox Time Spent</h4>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-12 graph-body">
+        <div class="text-center" id="devtools-toolbox-time-active-chart"></div>
+      </div>
+      <div class="col-md-4 col-md-offset-4 graph-legend">
+        <div id="devtools-toolbox-time-active-chart-legend"></div>
+        <p>Over a rolling 6 months this chart shows the amount of time spent (y axis)
+          with the DevTools toolbox opened and the release.  Size of the circles indicates the
+          number of users reporting that time slot.
+        </p>
       </div>
     </div>
 
