setup for tilt page

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@ title: DevTools Dashboard
 
 {% include header.html %}
 
+<script data-main="js/index" src="{{ site.baseurl }}/js/lib/require.js"></script>
+
 {% include navbar.html %}
 
   <div class="container-fluid">
