adding tilt as a page

--- a/tilt.html
+++ b/tilt.html
@@ -12,7 +12,7 @@ title: DevTools Tilt
 
     <div class="row">
       <div class="col-md-12 graph-header text-center">
-        <h4>Tilt Opened</h4>
+        <h4>Tilt</h4>
       </div>
     </div>
 
