add note about Beta channel

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ title: DevTools Dashboard
 
     <div class="row">
       <div class="col-md-12 graph-header text-center">
-        <h4>DevTools Panels</h4>
+        <h4>DevTools Panels (Beta Channel Only)</h4>
       </div>
     </div>
 
