offer progress bars for loading data

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ title: DevTools Dashboard
         <div class="row">
           <div class="col-md-12 graph-body">
             <div id="devtools-toolbox-opened-chart"></div>
+            <div id="devtools-toolbox-opened-chart-progress"></div>
           </div>
         </div>
         <div class="row">
@@ -33,6 +34,7 @@ title: DevTools Dashboard
         <div class="row">
           <div class="col-md-12 graph-body">
             <div id="devtools-toolbox-opened-per-user-chart"></div>
+            <div id="devtools-toolbox-opened-per-user-chart-progress"></div>
           </div>
         </div>
         <div class="row">
