add the progress bar for the time spent chart

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@ title: DevTools Dashboard
         <div class="row">
           <div class="col-md-12 graph-legend">
             <div class="text-center" id="devtools-toolbox-opened-ratio-chart-legend"></div>
+            <p>This chart is not currently functioning</p>
           </div>
         </div>
       </div>
@@ -73,6 +74,7 @@ title: DevTools Dashboard
       </div>
       <div class="col-md-4 col-md-offset-4 graph-legend">
         <div id="devtools-toolbox-time-active-chart-legend"></div>
+        <div id="devtools-toolbox-time-active-chart-progress"></div>
         <p>Over a rolling 6 months this chart shows the amount of time spent (y axis)
           with the DevTools toolbox opened and the release.  Size of the circles indicates the
           number of users reporting that time slot.
