--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ title: DevTools Dashboard
 
     <div class="row">
       <div class="col-md-12 graph-header text-center">
-        <h4>Toolbox Opened</h4>
+        <h3>Toolbox Opened</h3>
       </div>
     </div>
 
@@ -50,9 +50,10 @@ title: DevTools Dashboard
           </div>
         </div>
         <div class="row">
-          <div class="col-md-12 graph-legend">
-            <div class="text-center" id="devtools-toolbox-opened-ratio-chart-legend"></div>
-            <p>This chart is not currently functioning</p>
+          <div class="col-md-12 graph-legend text-center">
+            <div id="devtools-toolbox-opened-ratio-chart-legend"></div>
+            <div class="alert alert-danger" role="alert"><strong>Sorry!</strong> This chart is not currently active</div>
+            <p></p>
           </div>
         </div>
       </div>
@@ -64,7 +65,7 @@ title: DevTools Dashboard
 
     <div class="row">
       <div class="col-md-12 graph-header text-center">
-        <h4>Toolbox Time Spent</h4>
+        <h3>Toolbox Time Spent</h3>
       </div>
     </div>
 
@@ -72,7 +73,7 @@ title: DevTools Dashboard
       <div class="col-md-12 graph-body">
         <div class="text-center" id="devtools-toolbox-time-active-chart"></div>
       </div>
-      <div class="col-md-4 col-md-offset-4 graph-legend">
+      <div class="col-md-6 col-md-offset-3 graph-legend">
         <div id="devtools-toolbox-time-active-chart-legend"></div>
         <div id="devtools-toolbox-time-active-chart-progress"></div>
         <p>Over a rolling 6 months this chart shows the amount of time spent (y axis)
@@ -84,33 +85,44 @@ title: DevTools Dashboard
 
     <div class="row">
       <div class="col-md-12 graph-header text-center">
-        <h4>DevTools Panels (Beta Channel Only)</h4>
+        <h3>More Graphs</h3>
       </div>
     </div>
 
-    <!-- All Panels Compared  -->
     <div class="row">
-      <div class="col-md-6">
-        <div class="row">
-          <div class="col-md-12 graph-body">
-            <div id="devtools-toolbox-panels-opened-chart"></div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-12 graph-legend">
-            <div id="devtools-toolbox-panels-opened-chart-legend"></div>
+      <div class="col-md-4">
+        <div class="panel panel-default">
+          <div class="panel-body">
+            <h4><a href="panels.html">Panels</a></h4>
+            <ul>
+              <li>Inspector</li>
+              <li>Console</li>
+              <li>Debugger</li>
+              <li>Performance</li>
+              <li>Storage</li>
+            </ul>
           </div>
         </div>
       </div>
-      <div class="col-md-6">
-        <div class="row">
-          <div class="col-md-12 graph-body">
-            <div id="devtools-toolbox-panels-time-active-chart"></div>
+      <div class="col-md-4">
+        <div class="panel panel-default">
+          <div class="panel-body">
+            <h4><a href="reload.html">DevTools Reload</a></h4>
+            <ul>
+              <li>Reload Add-on Installs</li>
+              <li>Reload Add-on Usage</li>
+            </ul>
           </div>
         </div>
-        <div class="row">
-          <div class="col-md-12 graph-legend">
-            <div id="devtools-toolbox-panels-time-active-chart-legend"></div>
+      </div>
+      <div class="col-md-4">
+        <div class="panel panel-default">
+          <div class="panel-body">
+            <h4><a href="env.html">Environment</a></h4>
+            <ul>
+              <li>Operating System</li>
+              <li>Screen Resolution (coming soon)</li>
+            </ul>
           </div>
         </div>
       </div>
