add the OS env doughnut chart

--- a/env.html
+++ b/env.html
@@ -2,6 +2,8 @@
 title: DevTools Operating Systems
 ---
 
+{% include header.html %}
+
 <!--
   "DEVTOOLS_OS_IS_64_BITS_PER_USER": {
     "expires_in_version": "never",
@@ -45,8 +47,6 @@ title: DevTools Operating Systems
   },
 -->
 
-{% include header.html %}
-
 <script data-main="js/env" src="{{ site.baseurl }}/js/lib/require.js"></script>
 
 {% include navbar.html %}
@@ -72,15 +72,34 @@ title: DevTools Operating Systems
           </div>
         </div>
       </div>
+
       <div class="col-md-6">
         <div class="row">
           <div class="col-md-12 graph-body">
-            <div id="devtools-screen-resolution-chart"></div>
+          <style>
+          svg {
+          	width: 100%;
+          	height: 100%;
+          }
+          path.slice{
+          	stroke-width:2px;
+          }
+          polyline{
+          	opacity: .3;
+          	stroke: black;
+          	stroke-width: 2px;
+          	fill: none;
+          }
+          #devtools-operating-system-doughnut {
+            height: 400px;
+          }
+          </style>
+            <div id="devtools-operating-system-doughnut"></div>
           </div>
         </div>
         <div class="row">
           <div class="col-md-12 graph-legend">
-            <div class="text-center" id="devtools-screen-resolution-chart-legend"></div>
+            <!-- <div class="text-center" id="devtools-screen-resolution-chart-legend"></div> -->
           </div>
         </div>
       </div>
@@ -93,6 +112,21 @@ title: DevTools Operating Systems
     <div class="row">
       <div class="col-md-12 graph-header text-center">
         <h4></h4>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-6">
+        <div class="row">
+          <div class="col-md-12 graph-body">
+            <div id="devtools-screen-resolution-chart"></div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12 graph-legend">
+            <div class="text-center" id="devtools-screen-resolution-chart-legend"></div>
+          </div>
+        </div>
       </div>
     </div>
 
