hide the time spent for now

--- a/about-debugging.html
+++ b/about-debugging.html
@@ -44,7 +44,7 @@ title: about:debugging
         </div>
       </div>
     </div>
-
+<!-- 
     <div class="clearfix">
       <p>&nbsp;</p>
     </div>
@@ -63,7 +63,7 @@ title: about:debugging
         <div id="devtools-about-debugging-time-active-chart-legend"></div>
         <div id="devtools-about-debugging-time-active-chart-progress"></div>
       </div>
-    </div>
+    </div> -->
 
   </div>
 
