added time-active-seconds module for about:debugging

--- a/about-debugging.html
+++ b/about-debugging.html
@@ -44,14 +44,14 @@ title: about:debugging
         </div>
       </div>
     </div>
-<!-- 
+
     <div class="clearfix">
       <p>&nbsp;</p>
     </div>
 
     <div class="row">
       <div class="col-md-12 graph-header text-center">
-        <h4>about:debugging Time Spent</h4>
+        <h4>about:debugging time spent</h4>
       </div>
     </div>
 
@@ -63,7 +63,7 @@ title: about:debugging
         <div id="devtools-about-debugging-time-active-chart-legend"></div>
         <div id="devtools-about-debugging-time-active-chart-progress"></div>
       </div>
-    </div> -->
+    </div>
 
   </div>
 
