move tilt to use library modules

--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@ title: DevTools Dashboard
     </div>
 
     <div class="row">
+
       <div class="col-md-4">
         <div class="panel panel-default">
           <div class="panel-body">
@@ -118,6 +119,7 @@ title: DevTools Dashboard
           </div>
         </div>
       </div>
+
       <div class="col-md-4">
         <div class="panel panel-default">
           <div class="panel-body">
@@ -129,6 +131,7 @@ title: DevTools Dashboard
           </div>
         </div>
       </div>
+
       <div class="col-md-4">
         <div class="panel panel-default">
           <div class="panel-body">
@@ -140,6 +143,35 @@ title: DevTools Dashboard
           </div>
         </div>
       </div>
+
+    </div>
+
+    <div class="row">
+
+      <div class="col-md-4">
+        <div class="panel panel-default">
+          <div class="panel-body">
+            <h4><a href="tilt.html">Tilt</a></h4>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-4">
+        <div class="panel panel-default">
+          <div class="panel-body">
+            <h4><a href="about-debugging.html">about:debugging</a></h4>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-4">
+        <div class="panel panel-default">
+          <div class="panel-body">
+            <h4><a href="reload.html">Reload Add-On</a></h4>
+          </div>
+        </div>
+      </div>
+
     </div>
 
   </div>
